--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pal_statistics_msgs
-	previous = 
-	base = 4e13fc004675
+	previous = 4e13fc004675
+	base = 46034b61ade0
 	trim = 
 	trimbase = 
