--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/pal_statistics
-	previous = 
-	base = 71db6f58ec65
+	previous = 71db6f58ec65
+	base = f31f17cb1a8f
 	trim = 
 	trimbase = 
