--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/pal_statistics_msgs
+	parent = release/rolling/pal_statistics_msgs/2.1.5-2
 	previous = 4e13fc004675
 	base = 790f67e02cdb
 	trim = 
