--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/pal_statistics
+	parent = release/rolling/pal_statistics/2.1.5-2
 	previous = 71db6f58ec65
 	base = 544247a0f33f
 	trim = 
